[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pwnlib_8448"
version = "0.1.0"
description = "Lightweight pwntools-like library for exploitation"
authors = [
    {name = "Luis Fernando"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
